--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>chatGPT - 体验版</title>
+  <title>ChatGPT - 体验版</title>
 </head>
 
 <body>
